variables.Variables.scala.error
Erreur de compilation :
Variables:4: error: value ++ is not a member of Int
  x++
   ^Variables:6: error: not found: value prendreBiscuit
prendreBiscuit()
^