variables.Variables.scala.code
val x:Int=0
while(!estSurBiscuit){
  avance()
  x++
}
prendreBiscuit()
val y:Int=0
for(y<-0 to x){
  recule()
}
poseBiscuit()